# chasolver

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
examples/: analyzer.rs  challenge.rs
src/: lib.rs  utils.rs
src/deduction/: analysis.rs  dev.rs  mod.rs  saturation.rs  utils.rs
src/search/: engine.rs  heuristics.rs  mod.rs  probes.rs  utils.rs
src/winnability/: fast.rs  full.rs  mod.rs
tests/: integration.rs  lichess.txt  positions.txt
